<resources>
    <string name="app_name">AdrianCloud</string>
    <string name="bienvenido">Bienvenido a\n Adrian\'s Cloud</string>
    <string name="username">Username</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Login</string>
    <string name="olvide_la_contrase_a">
        <u>Olvide la Contraseña</u>
    </string>
    <string name="bienvenidos_a">Bienvenidos a</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_out">Sign out</string>
    <string name="email">Email</string>
    <string name="threading_lab">Threading Lab</string>
    <string name="api_wrapper">Api Wrapper</string>
    <string name="picture_studio">Picture Studio</string>
    <string name="lambda_reactor">Lambda Reactor</string>
    <string name="testing_message">Un texto de prueba, esto tiene fines de testeo, si veo esto, algo codifique mal
    </string>
    <string name="titulo">Titulo</string>
    <string name="cuerpo">Cuerpo</string>
    <string name="agregar_post">Agregar Post</string>
    <string name="a_ada_un_nuevo_post">Añada un nuevo Post</string>
    <string name="modifique_el_post">Modifique el post</string>
    <string name="modificar_post">Modificar Post</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="actualizar_perfil">Actualizar perfil</string>
    <string name="for_deleting_received_post">For deleting received Post</string>
    <string name="confirm_post_adding_updating">Confirm Post adding/updating</string>
</resources>
