<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/addpost_logo"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_centerInParent="true"
            android:src="@drawable/post_it_icon_transparent"
    />

    <TextView
            android:id="@+id/postform_textV_post_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:text="@string/a_ada_un_nuevo_post"
            android:textStyle="italic"
            android:textSize="24sp"/>


    <androidx.cardview.widget.CardView
            android:id="@+id/title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/semi_transparent"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="52dp"

            app:cardCornerRadius="20dp"
            android:layout_alignTop="@id/addpost_logo"
            android:layout_marginTop="90dp"
            android:elevation="32dp">

        <EditText
                android:id="@+id/postform_edit_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:gravity="center"
                android:hint="@string/titulo"
                android:lines="2"
                android:inputType="text|textMultiLine|textCapSentences"
                android:textSize="20sp"
                android:textStyle="bold|italic"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/semi_transparent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/title_container"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="20dp"
            android:elevation="32dp">

        <EditText
                android:id="@+id/postform_edit_body"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/transparent"
                android:gravity="center"
                android:hint="@string/cuerpo"
                android:lines="6"
                android:inputType="text|textMultiLine|textCapSentences"
                android:textSize="20sp"
                android:textStyle="bold|italic"/>

    </androidx.cardview.widget.CardView>

    <ImageButton
            android:id="@+id/bttn_delete_post"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/delete_icon"
            android:scaleType="fitCenter"
            android:padding="16dp"
            android:backgroundTint="@color/transparent"
            android:tint="@color/transparentRed"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/for_deleting_received_post"/>

    <ImageButton
            android:id="@+id/bttn_accept_post"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/circle_checkmark"
            android:backgroundTint="@color/transparent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/confirm_post_adding_updating"/>

    <ImageButton
            android:id="@+id/bttn_cancel_post"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/circled_cancel_icon_24dp"
            android:backgroundTint="@color/transparent"
            android:background="@color/transparent"
            android:tint="@color/midGray"
            android:scaleType="fitXY"

            android:layout_marginBottom="16dp"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"

            android:contentDescription="@string/cancelar"/>

</RelativeLayout>